# OpenSentinel

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  demo.html  generate_og_image.py  index.html  package-lock.json  package.json  verify_logo.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-audit.yml  deploy.yml  enforce-protection.yml
OpenSentinel/: GOVERNANCE.md
OpenSentinel/client/: index.html  style.css
OpenSentinel/docs/: ARCHITECTURE.md
OpenSentinel/server/: Dockerfile
OpenSentinel/server/src/: main.rs
assets/css/: demo.css  style.css
assets/js/: main.js  sensor.js
client/: index.html
client/src/: sensor.js
docs/: ARCHITECTURE.md  demo.html  index.html
docs/assets/css/: demo.css  style.css
docs/assets/js/: main.js  sensor.js
scripts/: prepare_deploy.sh  protect_branch.sh  train_model.py  verify_deployment.py  verify_layout.py
server/: Cargo.toml  Dockerfile  model.onnx
server/src/: main.rs  ml.rs
server/tests/: ml_predict_test.rs  ml_test.rs
tests/: federation_tests.py  integration_tests.py
