[package]
name = "opensentinel-server"
version = "0.1.0"
edition = "2021"
keywords = ["captcha", "security", "web", "privacy", "bot-detection"]

[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
log = "0.4"
ort = "2.0.0-rc.12"
ndarray = "0.17.2"
actix-cors = "0.7.1"
base64 = "0.22.1"
sha2 = "0.11.0"
reqwest = { version = "0.13.3", features = ["json"] }
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros", "sync"] }
hex = "0.4.3"
